<resources>
    <string name="app_name">ChatMate</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">sign_in</string>
    <string name="signin">Sign In</string>
    <string name="select_user">Select User</string>
    <string name="online">Online</string>

</resources>